src/sections/header/header.css
#header-section {
  width: 100vw;
  margin: 0 150px;
  position: relative;
}

#header-section.dark {
  /* background: #161516; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
  color: #ffffff;
}

#header {
  /* place-items: center;
  display: flex;
  justify-content: space-between; */
  /* background: #fffefe; */
  /* background: transparent;
  transition: var(--transition); */
}

#header.dark {
  color: #fff;
}

.circle-svg {
  position: absolute;
  animation: wave 60s linear infinite;
}

.background-overlay {
  position: absolute;
  top: 80px;
  max-width: 100vw;
  height: 830px;
  inset: 0;
  left: 0;
  right: 0;
  bottom: 0;
  /* background-color: #ffffff; */
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%2303b1ff' fill-opacity='0.38' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
  opacity: 0.15;
}

.background-overlay.dark {
  background-color: #000000;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%2303b1ff' fill-opacity='0.38' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
}

.container.dark {
  /* background: #161515 !important; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
}

.container.header__container {
  display: flex;
  align-items: center;
  position: relative;
  justify-content: center;
  background: transparent !important;
  padding: 0;
  margin-left: 0;
}

.container.header__container.dark {
  /* background: #161516 !important; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
  color: #fff;
}

.hero {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  justify-content: center;
  gap: 3rem;
  width: 85%;
  margin-top: 120px;
  background: transparent !important;
}

.hero.dark {
  /* background: #161515 !important; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
}

.hero .content {
  display: flex;
  flex-direction: column;
  align-items: start;
  text-align: left;
  justify-content: center;
  margin-right: 15px;
  padding-left: 10px;
  max-width: 600px;
}

.hero .content.dark {
  /* background: #161515; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
  color: #fff;
}

.hero__details {
  text-align: left;
  justify-content: center;
  margin: 0 auto;
  align-items: center;
  flex: 2;
}

.hero__details.dark {
  /* background: #161515 !important; */
  /* background: linear-gradient(
    109.6deg,
    rgb(36, 45, 57) 11.2%,
    rgb(16, 37, 60) 51.2%,
    rgb(0, 0, 0) 98.6%
  ); */
  color: #ffffff;
}

.hello {
  text-align: left;
  font-size: 70px;
  font-weight: bold;
  font-family: "Poppins", sans-serif;
  margin-bottom: 40px;
}

.hello.dark {
  color: #ffffff;
}

.job {
  color: var(--primary-text-color-500);
  margin-bottom: 10px;
  font-family: "League Spartan", sans-serif;
  letter-spacing: 0.1px;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.4;
}

/* Dark mode */
h3.job.dark {
  color: #ffffff;
}

.firstName {
  color: var(--primary-text-color-800);
  font-size: 78px;
  font-weight: bold;
  margin-bottom: 40px;
  padding-left: 14px;
}

.highlight {
  background: url(//s2.svgbox.net/pen-brushes.svg?ic=brush-1&color=ffdf4f);
  margin: 2px 6px;
  padding: 2px 8px;
  transform: translate(-30deg);
}

/* dark mode */
.highlight-dark {
  background: url(//s2.svgbox.net/pen-brushes.svg?ic=brush-1&color=00baff) !important;
  color: #ffffff;
}

/* dark mode */
.firstName.changeColor,
.icons .icon.changeColor svg {
  color: #ffffff;
}

.icons {
  padding: 20px 0;
  display: flex;
  flex-direction: row;
  text-decoration: none;
  margin-bottom: 15px;
  font-size: 29px;
  justify-content: flex-start;
}

.icons svg {
  font-size: 40px;
  margin-right: 10px;
}

.icon:hover svg {
  color: var(--primary-brand-color-400);
}

.icon.changeColor:hover svg {
  color: var(--primary-brand-color-400);
}
button {
  text-align: center;
}

button.portfolio-btn {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0.5px;
  background-color: var(--primary-brand-color-400);
  color: var(--primary-brand-color-alternate-600);
  width: fit-content;
}

.portfolio-btn:hover {
  opacity: 0.9;
  transform: translateY(-3px);
  transition: 300ms ease-in;
}

.btn.portfolio-btn a.portfolio-name {
  font-size: 1.4rem;
}

.self-photo {
  background-position: 90%;
  background-repeat: no-repeat;
  background-size: cover;
  height: auto;
  width: 400px;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.self-photo::before {
}

.self-photo img {
  width: 100%;
  height: auto;
  /* border: 10px solid var(--primary-opposite-text-color-800); */
  border-radius: 8px;
  object-fit: contain;
  z-index: 3;
  background: transparent;
}

.conic {
  position: absolute;
  height: auto;
  width: fit-content;
  top: -4px;
  left: -4px;
  bottom: -4px;
  right: -4px;
  border-radius: 8px;
  background: conic-gradient(
    from 0deg,
    #03b1ff,
    #ff8a00,
    #00ff00,
    #ff00ff,
    #03b1ff
  );
  transform: translateX(18px);
  transform: translateY(-64px);
  animation: gradientAnimation 10s linear infinite;
}

@keyframes gradientAnimation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes rotate {
  100% {
    transform: rotate(1turn);
  }
}

@keyframes opacityChange {
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

@media screen and (max-width: 1440px) {
  .conic {
  }
}
@media screen and (min-width: 1240px) {
  .conic {
    /* height: 86%;
    transform: translateY(-18px); */
  }
}

@media screen and (min-width: 1100px) {
  .self-photo {
    margin-top: -30px;
    /* Adjust this value to move the element higher */
  }
  .conic {
    top: 58px;
    bottom: 58px;
  }
}

@media screen and (max-width: 1100px) {
  .hero {
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    margin-top: 40px;
    gap: 5rem;
    text-align: center;
  }
  .hero__details {
    text-align: center;
    margin: 0 auto;
    align-items: center;
    justify-content: center;
  }
  .background-overlay {
    width: 100vw;
    height: 1300px !important;
  }

  .hero__details h1 {
    font-size: 50px;
  }

  .hero__details h1,
  .job,
  .icons {
    text-align: center;
  }

  .icons {
    justify-content: center;
  }
  h1.hello {
    font-size: 64px;
  }
  h3.job {
    padding-top: 30px;
    width: 70%;
    text-wrap: wrap;
    margin: 0 auto;
    text-align: center;
  }

  .button-container {
    text-align: center;
    display: block;
    margin: 0 auto !important;
  }

  .button-container .btn.portfolio-btn {
    margin: 0 auto;
  }
  .self-photo {
    width: fit-content;
  }
  img {
    height: auto;
    margin: 0 auto;
    width: fit-content;
  }
  .conic {
    margin: 0 auto;
  }
}

